--- a/bastille.html
+++ b/bastille.html
@@ -30,10 +30,10 @@
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
-                <img src="/images/logo/ohmyfood.png" alt="logo_picture">
+                <img src="/images/logo/ohmyfood.png" alt="logo">
             </div>
             <img class="nav-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp"
-                alt="restaurant_picture">
+                alt="bastille">
         </nav>
     </header>
     <!-- MAIN SECTION -->
