--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -30,10 +30,10 @@
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
-                <img src="/images/logo/ohmyfood.png" alt="logo_picture">
+                <img src="/images/logo/ohmyfood.png" alt="logo">
             </div>
             <img class="nav-img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
-                alt="restaurant_picture">
+                alt="le gourmand">
         </nav>
     </header>
     <!-- MAIN SECTION -->
