--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -33,7 +33,7 @@
             <nav>
                 <!-- <div class="navigation"> -->
                 <a href="ohmyfood.html" class="navigation">
-                    <img src="/images/logo/ohmyfood.png" alt="logo_picture">
+                    <img src="/images/logo/ohmyfood.png" alt="the logo">
                 </a>
                 <div class="search-btn-wrap">
                     <i class="fas fa-map-marker-alt"></i>
@@ -76,7 +76,8 @@
                 <h3>Restaurants</h3>
                 <div class="rst-ad">
                     <a target="_self" href="the_full_palette.html">
-                        <img src="/images/restaurants-main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp" alt="restaurant_picture">
+                        <img src="/images/restaurants-main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp"
+                            alt="the full palette">
                         <span>New</span>
                     </a>
                     <div class="ad-info">
@@ -94,7 +95,8 @@
                 </div>
                 <div class="rst-ad">
                     <a target="_self" href="the_enchanted_plate.html">
-                        <img src="./images/restaurants-main-page/stil-u2Lp8tXIcjw-unsplash.webp" alt="restaurant_picture">
+                        <img src="./images/restaurants-main-page/stil-u2Lp8tXIcjw-unsplash.webp"
+                            alt="the enchanted plate">
                         <span>New</span>
                     </a>
                     <div class="ad-info">
@@ -110,7 +112,8 @@
                 </div>
                 <div class="rst-ad">
                     <a target="_self" href="le_gourmand.html">
-                        <img src="images/restaurants-main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp" alt="restaurant_picture">
+                        <img src="images/restaurants-main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
+                            alt="le gourmand">
                     </a>
                     <div class="ad-info">
                         <a href="le_gourmand.html">
@@ -125,7 +128,7 @@
                 </div>
                 <div class="rst-ad">
                     <a target="_self" href="bastille.html">
-                        <img src="images/restaurants-main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="restaurant_picture">
+                        <img src="images/restaurants-main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="bastille">
                     </a>
                     <div class="ad-info">
                         <a href="bastille.html">
