--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -31,9 +31,9 @@
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
-                <img src="/images/logo/ohmyfood.png" alt="logo picture">
+                <img src="/images/logo/ohmyfood.png" alt="logo">
             </div>
-            <img class="nav-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.webp" alt="restaurant picture">
+            <img class="nav-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.webp" alt="the enchanted plate">
         </nav>
     </header>
     <!-- MAIN SECTION -->
