--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -29,10 +29,10 @@
                 <a href="ohmyfood.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
-                <img src="/images/logo/ohmyfood@2x.svg" alt="logo picture">
+                <img src="/images/logo/ohmyfood@2x.svg" alt="logo">
             </div>
             <img class="nav-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.webp"
-                alt="restaurant picture">
+                alt="the full palette">
         </nav>
     </header>
     <!-- MAIN SECTION -->
