--- a/bastille.html
+++ b/bastille.html
@@ -32,8 +32,7 @@
                 </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo">
             </div>
-            <img class="nav-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp"
-                alt="bastille">
+            <img class="nav-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="bastille">
         </nav>
     </header>
     <!-- MAIN SECTION -->
@@ -51,10 +50,10 @@
                 <div class="visible-dish-wrap first">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Citrus Squid Carpaccio</h3>
+                            <div class="dish-info">
+                                <span>Citrus Squid Carpaccio</span>
                                 <p>With orange zest</p>
-                            </article>
+                            </div>
                             <span class="dish-price">25€</span>
                         </div>
                         <div class="check">
@@ -65,10 +64,10 @@
                 <div class="visible-dish-wrap second">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Grandmoters's Vegetable Soup</h3>
+                            <div class="dish-info">
+                                <span>Grandmoters's Vegetable Soup</span>
                                 <p>Carrots,parsnips,Jerusalem artichoke</p>
-                            </article>
+                            </div>
                             <span class="dish-price">35€</span>
                         </div>
                         <div class="check">
@@ -79,10 +78,10 @@
                 <div class="visible-dish-wrap third">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Onion Soup</h3>
+                            <div class="dish-info">
+                                <span>Onion Soup</span>
                                 <p>Revisited</p>
-                            </article>
+                            </div>
                             <span class="dish-price">20€</span>
                         </div>
                         <div class="check">
@@ -98,10 +97,10 @@
                 <div class="visible-dish-wrap fourth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Scallops</h3>
+                            <div class="dish-info">
+                                <span>Scallops</span>
                                 <p>With mashed parsnip</p>
-                            </article>
+                            </div>
                             <span class="dish-price">40€</span>
                         </div>
                         <div class="check">
@@ -112,10 +111,10 @@
                 <div class="visible-dish-wrap fifth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Magret de canard</h3>
+                            <div class="dish-info">
+                                <span>Magret de canard</span>
                                 <p>With mashed potatoes</p>
-                            </article>
+                            </div>
                             <span class="dish-price">35€</span>
                         </div>
                         <div class="check">
@@ -126,10 +125,10 @@
                 <div class="visible-dish-wrap sixth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Game Hen</h3>
+                            <div class="dish-info">
+                                <span>Game Hen</span>
                                 <p>With vegetable gnocchis</p>
-                            </article>
+                            </div>
                             <span class="dish-price">44€</span>
                         </div>
                         <div class="check">
@@ -145,10 +144,10 @@
                 <div class="visible-dish-wrap seventh">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Floral Ice Cream</h3>
+                            <div class="dish-info">
+                                <span>Floral Ice Cream</span>
                                 <p>With hazelnut butter</p>
-                            </article>
+                            </div>
                             <span class="dish-price">18€</span>
                         </div>
                         <div class="check">
@@ -159,10 +158,10 @@
                 <div class="visible-dish-wrap eighth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Chocolate Lava Cake</h3>
+                            <div class="dish-info">
+                                <span>Chocolate Lava Cake</span>
                                 <p>Revisited</p>
-                            </article>
+                            </div>
                             <span class="dish-price">22€</span>
                         </div>
                         <div class="check">
@@ -173,10 +172,10 @@
                 <div class="visible-dish-wrap ninth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Napolean</h3>
+                            <div class="dish-info">
+                                <span>Napolean</span>
                                 <p>With blueberries and marzipan</p>
-                            </article>
+                            </div>
                             <span class="dish-price">23€</span>
                         </div>
                         <div class="check">
@@ -190,7 +189,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-        <h4>ohmyfood</h4>
+        <h3>ohmyfood</h3>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
