--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -51,10 +51,10 @@
                 <div class="visible-dish-wrap first">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Foie Gras Ravioli</h3>
+                            <div class="dish-info">
+                                <span>Foie Gras Ravioli</span>
                                 <p>With truffle cream</p>
-                            </article>
+                            </div>
                             <span class="dish-price">25€</span>
                         </div>
                         <div class="check">
@@ -65,10 +65,10 @@
                 <div class="visible-dish-wrap second">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Oscietra Caviar</h3>
+                            <div class="dish-info">
+                                <span>Oscietra Caviar</span>
                                 <p>With buckwheat blinis</p>
-                            </article>
+                            </div>
                             <span class="dish-price">35€</span>
                         </div>
                         <div class="check">
@@ -79,10 +79,10 @@
                 <div class="visible-dish-wrap third">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Lobster and Leek Foam</h3>
+                            <div class="dish-info">
+                                <span>Lobster and Leek Foam</span>
                                 <p>Marinated with orange zest</p>
-                            </article>
+                            </div>
                             <span class="dish-price">20€</span>
                         </div>
                         <div class="check">
@@ -93,10 +93,10 @@
                 <div class="visible-dish-wrap fourth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Duck Foie Gras</h3>
+                            <div class="dish-info">
+                                <span>Duck Foie Gras</span>
                                 <p>With fig jam and grilled baguette</p>
-                            </article>
+                            </div>
                             <span class="dish-price">35€</span>
                         </div>
                         <div class="check">
@@ -112,10 +112,10 @@
                 <div class="visible-dish-wrap fifth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Fresh Buttered Scallops</h3>
+                            <div class="dish-info">
+                                <span>Fresh Buttered Scallops</span>
                                 <p>With white celery puree</p>
-                            </article>
+                            </div>
                             <span class="dish-price">40€</span>
                         </div>
                         <div class="check">
@@ -126,10 +126,10 @@
                 <div class="visible-dish-wrap sixth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Pan-Fried Lobster</h3>
+                            <div class="dish-info">
+                                <span>Pan-Fried Lobster</span>
                                 <p>With mashed sweet potatoes</p>
-                            </article>
+                            </div>
                             <span class="dish-price">35€</span>
                         </div>
                         <div class="check">
@@ -140,10 +140,10 @@
                 <div class="visible-dish-wrap seventh">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Braised Ox Tail</h3>
+                            <div class="dish-info">
+                                <span>Braised Ox Tail</span>
                                 <p>With wild rice and lemon zest</p>
-                            </article>
+                            </div>
                             <span class="dish-price">44€</span>
                         </div>
                         <div class="check">
@@ -159,10 +159,10 @@
                 <div class="visible-dish-wrap eighth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Chocolate and Hazelnut Macaron</h3>
+                            <div class="dish-info">
+                                <span>Chocolate and Hazelnut Macaron</span>
                                 <p>With caramel butter ice cream</p>
-                            </article>
+                            </div>
                             <span class="dish-price">18€</span>
                         </div>
                         <div class="check">
@@ -173,10 +173,10 @@
                 <div class="visible-dish-wrap ninth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Baba au rhum</h3>
+                            <div class="dish-info">
+                                <span>Baba au rhum</span>
                                 <p>With lemon drizzle</p>
-                            </article>
+                            </div>
                             <span class="dish-price">22€</span>
                         </div>
                         <div class="check">
@@ -187,10 +187,10 @@
                 <div class="visible-dish-wrap tenth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Lemon Meringue Pie</h3>
+                            <div class="dish-info">
+                                <span>Lemon Meringue Pie</span>
                                 <p>Destructured</p>
-                            </article>
+                            </div>
                             <span class="dish-price">23€</span>
                         </div>
                         <div class="check">
@@ -204,7 +204,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-        <h4>ohmyfood</h4>
+        <h3>ohmyfood</h3>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
