--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -44,20 +44,16 @@
                 <i class="far heart fa-heart "></i>
             </article>
             <!-- Starters -->
-
             <h2>ENTREES</h2>
             <div class="line"></div>
             <div class="menu-section">
-
                 <div class="visible-dish-wrap first">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Escargot</h3>
-                                <!-- <div class="dish-describe"> -->
+                            <div class="dish-info">
+                                <span>Escargot</span>
                                 <p>With southern French spices</p>
-                                <!-- </div> -->
-                            </article>
+                            </div>
                             <span class="dish-price">25€</span>
                         </div>
                         <div class="check">
@@ -68,10 +64,10 @@
                 <div class="visible-dish-wrap second">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Duck Foie Gras</h3>
+                            <div class="dish-info">
+                                <span>Duck Foie Gras</span>
                                 <p>With black truffle shavings</p>
-                            </article>
+                            </div>
                             <span class="dish-price">35€</span>
                         </div>
                         <div class="check">
@@ -82,10 +78,10 @@
                 <div class="visible-dish-wrap third">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Fried egg</h3>
+                            <div class="dish-info">
+                                <span>Fried egg</span>
                                 <p>Seasoned with truffle cream and ... </p>
-                            </article>
+                            </div>
                             <span class="dish-price">20€</span>
                         </div>
                         <div class="check">
@@ -95,18 +91,16 @@
                 </div>
             </div>
             <!-- Main dish -->
-
-            <!-- <div class="menu-section"> -->
             <h2>MAIN DISH</h2>
             <div class="line"></div>
             <div class="menu-section">
                 <div class="visible-dish-wrap fourth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Herb-Encrusted Steak</h3>
+                            <div class="dish-info">
+                                <span>Herb-Encrusted Steak</span>
                                 <p>With delicately sliced and seasoned veg...</p>
-                            </article>
+                            </div>
                             <span class="dish-price">40€</span>
                         </div>
                         <div class="check">
@@ -117,10 +111,10 @@
                 <div class="visible-dish-wrap fifth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Ox Tail Shepard's Pie</h3>
+                            <div class="dish-info">
+                                <span>Ox Tail Shepard's Pie</span>
                                 <p>With black truffle and pureed parsnips</p>
-                            </article>
+                            </div>
                             <span class="dish-price">35€</span>
                         </div>
                         <div class="check">
@@ -131,10 +125,10 @@
                 <div class="visible-dish-wrap sixth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Filet of Sole</h3>
+                            <div class="dish-info">
+                                <span>Filet of Sole</span>
                                 <p>With citrus dressing</p>
-                            </article>
+                            </div>
                             <span class="dish-price">44€</span>
                         </div>
                         <div class="check">
@@ -144,18 +138,16 @@
                 </div>
             </div>
             <!-- Desserts -->
-
-            <!-- <div class="menu-section"> -->
             <h2>DESSERTS</h2>
             <div class="line"></div>
             <div class="menu-section">
                 <div class="visible-dish-wrap seventh">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Paris-Brest</h3>
+                            <div class="dish-info">
+                                <span>Paris-Brest</span>
                                 <p>Revisited</p>
-                            </article>
+                            </div>
                             <span class="dish-price">18€</span>
                         </div>
                         <div class="check">
@@ -166,10 +158,10 @@
                 <div class="visible-dish-wrap eighth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Chocolate Macaroons</h3>
+                            <div class="dish-info">
+                                <span>Chocolate Macaroons</span>
                                 <p>With vanilla ice cream</p>
-                            </article>
+                            </div>
                             <span class="dish-price">22€</span>
                         </div>
                         <div class="check">
@@ -180,10 +172,10 @@
                 <div class="visible-dish-wrap ninth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Chocolate Mousse</h3>
+                            <div class="dish-info">
+                                <span>Chocolate Mousse</span>
                                 <p>With cpices and black truffle</p>
-                            </article>
+                            </div>
                             <span class="dish-price">23€</span>
                         </div>
                         <div class="check">
@@ -197,7 +189,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-        <h4>ohmyfood</h4>
+        <h3>ohmyfood</h3>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
