--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -45,17 +45,16 @@
                 <i class="far heart fa-heart"></i>
             </article>
             <!-- Starters -->
-
             <h2>ENTREES</h2>
             <div class="line"></div>
             <div class="menu-section">
                 <div class="visible-dish-wrap first">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Tuna Carpaccio</h3>
+                            <div class="dish-info">
+                                <span>Tuna Carpaccio</span>
                                 <p>Seasoned with yuzu</p>
-                            </article>
+                            </div>
                             <span class="dish-price">25€</span>
                         </div>
                         <div class="check">
@@ -66,10 +65,10 @@
                 <div class="visible-dish-wrap second">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Crunchy Lobster Croquets</h3>
+                            <div class="dish-info">
+                                <span>Crunchy Lobster Croquets</span>
                                 <p>With seasonal vegetables</p>
-                            </article>
+                            </div>
                             <span class="dish-price">35€</span>
                         </div>
                         <div class="check">
@@ -80,10 +79,10 @@
                 <div class="visible-dish-wrap third">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Mushroom Soup</h3>
+                            <div class="dish-info">
+                                <span>Mushroom Soup</span>
                                 <p>With truffles</p>
-                            </article>
+                            </div>
                             <span class="dish-price">20€</span>
                         </div>
                         <div class="check">
@@ -99,10 +98,10 @@
                 <div class="visible-dish-wrap fourth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Roast Chicken with Provincal Herbs</h3>
+                            <div class="dish-info">
+                                <span>Roast Chicken with Provincal Herbs</span>
                                 <p>With truffle cream</p>
-                            </article>
+                            </div>
                             <span class="dish-price">40€</span>
                         </div>
                         <div class="check">
@@ -113,10 +112,10 @@
                 <div class="visible-dish-wrap fifth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Roasted Lobster</h3>
+                            <div class="dish-info">
+                                <span>Roasted Lobster</span>
                                 <p>With seasonel vegetables</p>
-                            </article>
+                            </div>
                             <span class="dish-price">35€</span>
                         </div>
                         <div class="check">
@@ -127,10 +126,10 @@
                 <div class="visible-dish-wrap sixth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Angust Beef Ribs</h3>
+                            <div class="dish-info">
+                                <span>Angust Beef Ribs</span>
                                 <p>With mashed parshnips</p>
-                            </article>
+                            </div>
                             <span class="dish-price">44€</span>
                         </div>
                         <div class="check">
@@ -146,10 +145,10 @@
                 <div class="visible-dish-wrap seventh">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Assorted Dessert Plate</h3>
+                            <div class="dish-info">
+                                <span>Assorted Dessert Plate</span>
                                 <p>Chef's choice</p>
-                            </article>
+                            </div>
                             <span class="dish-price">18€</span>
                         </div>
                         <div class="check">
@@ -160,10 +159,10 @@
                 <div class="visible-dish-wrap eighth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Crème brulée</h3>
+                            <div class="dish-info">
+                                <span>Crème brulée</span>
                                 <p>Revisited</p>
-                            </article>
+                            </div>
                             <span class="dish-price">22€</span>
                         </div>
                         <div class="check">
@@ -174,10 +173,10 @@
                 <div class="visible-dish-wrap ninth">
                     <div class="dish-wrap">
                         <div class="dish">
-                            <article class="dish-info">
-                                <h3>Tiramisu</h3>
+                            <div class="dish-info">
+                                <span>Tiramisu</span>
                                 <p>With hazelnuts</p>
-                            </article>
+                            </div>
                             <span class="dish-price">23€</span>
                         </div>
                         <div class="check">
@@ -191,7 +190,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-        <h4>ohmyfood</h4>
+        <h3>ohmyfood</h3>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
