--- a/bastille.html
+++ b/bastille.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Full</title>
+    <title>Bastille</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <!-- <link rel="stylesheet" href="css/smart-phone.css" type="text/css"> -->
 
     <!-- Libs -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,9 +34,9 @@
             <img class="nav-img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="bastille">
         </nav>
     </header>
-    <!-- MAIN SECTION -->
+    <!-- Bastille MAIN SECTION -->
     <main>
-        <!-- Menue section  --> -->
+        <!-- Bastille menue section  --> -->
         <article class="menu">
             <article class="menu-title">
                 <h1>Bastille</h1>
