--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Full</title>
+    <title>Le Gourmand</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <!-- <link rel="stylesheet" href="css/smart-phone.css" type="text/css"> -->
 
     <!-- Libs -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,9 +35,9 @@
                 alt="le gourmand">
         </nav>
     </header>
-    <!-- MAIN SECTION -->
+    <!-- Le Gourmand MAIN SECTION -->
     <main>
-        <!--Le Menue section  -->
+        <!--Le gourmand menue section  -->
         <article class="menu">
             <article class="menu-title">
                 <h1>Le Gourmand</h1>
