--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -31,7 +31,6 @@
 
             <!-- Section Navigation -->
             <nav>
-                <!-- <div class="navigation"> -->
                 <a href="ohmyfood.html" class="navigation">
                     <img src="/images/logo/ohmyfood.png" alt="the logo">
                 </a>
@@ -39,13 +38,13 @@
                     <i class="fas fa-map-marker-alt"></i>
                     <input type="search" name="search-box" id="search" placeholder="Paris, Belleville">
                 </div>
+                <article class="head">
+                    <h1>Book the menu you like</h1>
+                    <p>Discover top-of-the-art restaurants we picked for you</p>
+                    <button>Explore our restaurants</button>
+                </article>
             </nav>
             <!-- End of Navigation -->
-            <article class="head">
-                <h1>Book the menu you like</h1>
-                <p>Discover top-of-the-art restaurants we picked for you</p>
-                <button>Explore our restaurants</button>
-            </article>
         </header>
         <!-- MAIN SECTION -->
         <main>
@@ -70,74 +69,83 @@
                 </div>
             </article>
             <!-- Section of the restaurants -->
-            <article class="rsts-section">
+            <section class="rsts-section">
                 <h3>Restaurants</h3>
                 <div class="rst-ad">
-                    <a target="_self" href="the_full_palette.html">
-                        <img src="/images/restaurants-main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp"
-                            alt="the full palette">
-                        <span>New</span>
-                    </a>
-                    <div class="ad-info">
-                        <a href="the_full_palette.html">
-                            <article class="info">
-                                <h4>The Full Palette</h4>
-                                <p>Paris</p>
-                            </article>
+                    <figure>
+                        <a target="_self" href="the_full_palette.html">
+                            <img src="/images/restaurants-main-page/jay-wennington-N_Y88TWmGwA-unsplash.webp"
+                                alt="the full palette">
+                            <span>New</span>
                         </a>
-                        <i class="far fa-heart main-heart1"></i>
-                        <i class="fas fa-heart main-heart2"></i>
-                    </div>
+                        <figcaption class="ad-info">
+                            <a href="the_full_palette.html">
+                                <article class="info">
+                                    <h4>The Full Palette</h4>
+                                    <p>Paris</p>
+                                </article>
+                            </a>
+                            <i class="far fa-heart main-heart1"></i>
+                            <i class="fas fa-heart main-heart2"></i>
+                        </figcaption>
+                    </figure>
                 </div>
                 <div class="rst-ad">
-                    <a target="_self" href="the_enchanted_plate.html">
-                        <img src="./images/restaurants-main-page/stil-u2Lp8tXIcjw-unsplash.webp"
-                            alt="the enchanted plate">
-                        <span>New</span>
-                    </a>
-                    <div class="ad-info">
-                        <a href="the_enchanted_plate.html">
-                            <article class="info">
-                                <h4>The Enchanted Plate</h4>
-                                <p>Paris</p>
-                            </article>
+                    <figure>
+                        <a target="_self" href="the_enchanted_plate.html">
+                            <img src="./images/restaurants-main-page/stil-u2Lp8tXIcjw-unsplash.webp"
+                                alt="the enchanted plate">
+                            <span>New</span>
                         </a>
-                        <i class="far fa-heart main-heart1"></i>
-                        <i class="fas fa-heart main-heart2"></i>
-                    </div>
+                        <figcaption class="ad-info">
+                            <a href="the_enchanted_plate.html">
+                                <article class="info">
+                                    <h4>The Enchanted Plate</h4>
+                                    <p>Paris</p>
+                                </article>
+                            </a>
+                            <i class="far fa-heart main-heart1"></i>
+                            <i class="fas fa-heart main-heart2"></i>
+                        </figcaption>
+                    </figure>
                 </div>
                 <div class="rst-ad">
-                    <a target="_self" href="le_gourmand.html">
-                        <img src="images/restaurants-main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
-                            alt="le gourmand">
-                    </a>
-                    <div class="ad-info">
-                        <a href="le_gourmand.html">
-                            <article class="info">
-                                <h4>Le Gourmand</h4>
-                                <p>Paris</p>
-                            </article>
+                    <figure>
+                        <a target="_self" href="le_gourmand.html">
+                            <img src="images/restaurants-main-page/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.webp"
+                                alt="le gourmand">
                         </a>
-                        <i class="far fa-heart main-heart1"></i>
-                        <i class="fas fa-heart main-heart2"></i>
-                    </div>
+                        <figcaption class="ad-info">
+                            <a href="le_gourmand.html">
+                                <article class="info">
+                                    <h4>Le Gourmand</h4>
+                                    <p>Paris</p>
+                                </article>
+                            </a>
+                            <i class="far fa-heart main-heart1"></i>
+                            <i class="fas fa-heart main-heart2"></i>
+                        </figcaption>
+                    </figure>
                 </div>
                 <div class="rst-ad">
-                    <a target="_self" href="bastille.html">
-                        <img src="images/restaurants-main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp" alt="bastille">
-                    </a>
-                    <div class="ad-info">
-                        <a href="bastille.html">
-                            <article class="info">
-                                <h4>Bastille</h4>
-                                <p>Paris</p>
-                            </article>
+                    <figure>
+                        <a target="_self" href="bastille.html">
+                            <img src="images/restaurants-main-page/toa-heftiba-DQKerTsQwi0-unsplash.webp"
+                                alt="bastille">
                         </a>
-                        <i class="far fa-heart main-heart1"></i>
-                        <i class="fas fa-heart main-heart2"></i>
-                    </div>
+                        <figcaption class="ad-info">
+                            <a href="bastille.html">
+                                <article class="info">
+                                    <h4>Bastille</h4>
+                                    <p>Paris</p>
+                                </article>
+                            </a>
+                            <i class="far fa-heart main-heart1"></i>
+                            <i class="fas fa-heart main-heart2"></i>
+                        </figcaption>
+                    </figure>
                 </div>
-            </article>
+            </section>
         </main>
         <footer>
             <h5>ohmyfood</h5>
