--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Full pla
-    </title>
+    <title>The Enchanted plate</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <!-- <link rel="stylesheet" href="css/smart-phone.css" type="text/css"> -->
 
     <!-- Libs -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,9 +34,9 @@
             <img class="nav-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.webp" alt="the enchanted plate">
         </nav>
     </header>
-    <!-- MAIN SECTION -->
+    <!-- The Enchanted plate MAIN SECTION -->
     <main>
-        <!--The Full plat Menue section  -->
+        <!--The Enchanted plate menue section  -->
         <article class="menu">
             <article class="menu-title">
                 <h1>The Enchanted plate</h1>
