--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -35,7 +35,7 @@
                 alt="the full palette">
         </nav>
     </header>
-    <!-- MAIN SECTION -->
+    <!-- The Full Palette MAIN SECTION -->
     <main>
         <!--The Full palette Menue section  -->
         <article class="menu">
